# deskview

./: .gitignore  .pre-commit-config.yaml  context.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/src/: main.py
backend/src/read/adapters/market_data/: test_yahoo_finance_adapter.py  yahoo_finance_adapter.py
backend/src/read/web/routers/: greeks_router.py  market_data_router.py  vol_surface_router.py
backend/src/shared/domain/entities/: book.py  option_contract.py  position.py
backend/src/shared/domain/value_objects/: greeks.py  market_data.py  pnl_explain.py  shock_scenario.py
backend/src/write/adapters/pricing/: black_scholes_adapter.py  heston_adapter.py  test_black_scholes_adapter.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AddPositionModal.tsx  NavBar.tsx
frontend/src/contexts/: BookContext.tsx
frontend/src/pages/: BookPage.tsx  GreeksCalculatorPage.tsx  MarketDataPage.tsx  SimulatorPage.tsx
frontend/src/services/: api.ts
